styles: fix button link spacing

--- a/public/style.scss
+++ b/public/style.scss
@@ -30,6 +30,8 @@ img {
 }
 
 a.btn {
+	@extend .mb-2;
+	@extend .me-2;
 	font-weight: bold;
 }
 
